Renamed from scidev to sciflow

--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = bitbucket
-lib_name = scidev
+lib_name = sciflow
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 company_name = NewDay
@@ -28,7 +28,7 @@ status = 2
 # requirements = 
 # Optional. Same format as setuptools console_scripts
 # Custom scripts!!!
-console_scripts = scidev_tidy=scidev.nb_lint:scidev_tidy
+console_scripts = sciflow_tidy=sciflow.nb_lint:sciflow_tidy
 # Optional. Same format as setuptools dependency-links
 # dep_links = 
 
