Working graph extraction

--- a/settings.ini
+++ b/settings.ini
@@ -29,6 +29,7 @@ status = 2
 # Optional. Same format as setuptools console_scripts
 # Custom scripts!!!
 console_scripts = sciflow_tidy=sciflow.nb_lint:sciflow_tidy
+    sciflow_build_lib=sciflow.export_named:sciflow_build_lib
 # Optional. Same format as setuptools dependency-links
 # dep_links = 
 
