--- a/settings.ini
+++ b/settings.ini
@@ -1,14 +1,10 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified
 host = bitbucket
 lib_name = sciflow
-# For Enterprise Git add variable repo_name and company name
-# repo_name = analytics
 company_name = NewDay
-
 user = {user}
-description = Library that helps to discover patterns in large text sets
-keywords = nlp, discovery, text
+description = This library bridges the gap between research and production for Data Science.
+keywords = research, production, exploration
 author = {author}
 author_email = {author_email}
 copyright = NewDay Technology.
@@ -17,61 +13,20 @@ version = 0.0.1
 min_python = 3.7
 audience = Developers
 language = English
-# Set to True if you want to create a more fancy sidebar.json than the default
 custom_sidebar = False
-# Add licenses and see current list in `setup.py`
 license = apache2
-# From 1-7: Planning Pre-Alpha Alpha Beta Production Mature Inactive
 status = 2
-
-# Optional. Same format as setuptools requirements
-# requirements = 
-# Optional. Same format as setuptools console_scripts
-# Custom scripts!!!
 console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
-    sciflow_build_lib=sciflow.export_named:sciflow_build_lib
-# Optional. Same format as setuptools dependency-links
-# dep_links = 
-
-###
-# You probably won't need to change anything under here,
-#   unless you have some special requirements
-###
-
-# Change to, e.g. "nbs", to put your notebooks in nbs dir instead of repo root
+	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
 nbs_path = nbs
 doc_path = docs
-
-# Whether to look for library notebooks recursively in the `nbs_path` dir
+root_path = .
 recursive = False
-
-# Anything shown as '%(...)s' is substituted with that setting automatically
-doc_host =  https://%(user)s.github.io
-#For Enterprise Git pages use:  
-#doc_host = https://pages.github.%(company_name)s.com.  
-
-
+doc_host = https://%(user)s.github.io
 doc_baseurl = /%(lib_name)s/
-# For Enterprise Github pages docs use:
-# doc_baseurl = /%(repo_name)s/%(lib_name)s/
-
 git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
-# For Enterprise Github use:
-#git_url = https://github.%(company_name)s.com/%(repo_name)s/%(lib_name)s/tree/%(branch)s/
-
-
-
 lib_path = %(lib_name)s
 title = %(lib_name)s
-
-#Optional advanced parameters
-#Monospace docstings: adds <pre> tags around the doc strings, preserving newlines/indentation.
-#monospace_docstrings = False
-#Test flags: introduce here the test flags you want to use separated by |
 tst_flags = slow|vis
-#Custom sidebar: customize sidebar.json yourself for advanced sidebars (False/True)
-#custom_sidebar = 
-#Cell spacing: if you want cell blocks in code separated by more than one new line
-#cell_spacing = 
-#Custom jekyll styles: if you want more jekyll styles than tip/important/warning, set them here
-#jekyll_styles = note,warning,tip,important
+requirements = fastcore==1.3.19 nbdev==1.1.12 nbformat==5.0.8 nbqa==0.5.6 networkx==2.5 pandas==0.25.3
+
