--- a/nbs/test/settings.ini
+++ b/nbs/test/settings.ini
@@ -9,7 +9,7 @@ author = {author}
 author_email = {author_email}
 copyright = NewDay Technology.
 branch = {branch}
-version = 0.0.2
+version = 0.0.1
 min_python = 3.7
 audience = Developers
 language = English
@@ -18,16 +18,15 @@ license = apache2
 status = 2
 console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
 	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
-	sciflow_prepare=sciflow.packaging:sciflow_prepare
 nbs_path = nbs
 doc_path = docs
 root_path = .
 recursive = False
-doc_host = https://{user}.github.io
-doc_baseurl = /sciflow/
-git_url = https://github.com/{user}/sciflow/tree/{branch}/
-lib_path = sciflow
-title = sciflow
+doc_host = https://%(user)s.github.io
+doc_baseurl = /%(lib_name)s/
+git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
+lib_path = %(lib_name)s
+title = %(lib_name)s
 tst_flags = slow|vis
 requirements = fastcore==1.3.19 nbdev==1.1.12 nbformat==5.0.8 nbqa==0.5.6 networkx==2.5 pandas==0.25.3
 
