Finished initial flow generation

--- a/nbs/test/settings.ini
+++ b/nbs/test/settings.ini
@@ -21,6 +21,7 @@ console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
 nbs_path = nbs
 doc_path = docs
 root_path = .
+flows_path = test/flows
 recursive = False
 doc_host = https://%(user)s.github.io
 doc_baseurl = /%(lib_name)s/
