--- a/settings.ini
+++ b/settings.ini
@@ -19,9 +19,11 @@ status = 2
 console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
 	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
+	sciflow_generate=sciflow.metaflow:sciflow_generate
 nbs_path = nbs
 doc_path = docs
 root_path = .
+flows_path = flows
 recursive = False
 doc_host = https://{user}.github.io
 doc_baseurl = /sciflow/
