--- a/settings.ini
+++ b/settings.ini
@@ -16,6 +16,7 @@ language = English
 custom_sidebar = False
 license = apache2
 status = 2
+bucket = pprsandboxpdlras3
 console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
 	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
@@ -23,7 +24,7 @@ console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
 nbs_path = nbs
 doc_path = docs
 root_path = .
-flows_path = flows
+flows_path = nbs/test/flows
 recursive = False
 doc_host = https://{user}.github.io
 doc_baseurl = /sciflow/
