--- a/nbs/test/settings.ini
+++ b/nbs/test/settings.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
 host = bitbucket
-lib_name = sciflow
+lib_name = sciflow-test
 company_name = NewDay
 user = {user}
 description = This library bridges the gap between research and production for Data Science.
@@ -29,5 +29,5 @@ git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
 lib_path = %(lib_name)s
 title = %(lib_name)s
 tst_flags = slow|vis
-requirements = fastcore==1.3.19 nbdev==1.1.12 nbformat==5.0.8 nbqa==0.5.6 networkx==2.5 pandas==0.25.3
+requirements = fastcore==1.3.19 gensim==3.8.0 nbdev==1.1.12 nbformat==5.0.8 nbqa==0.5.6 networkx==2.5 newday_nexus_data_access==0.6.4 numpy==1.19.2 pandas==0.25.3 top2vec==1.0.23
 
