--- a/nbs/test/meta.yaml
+++ b/nbs/test/meta.yaml
@@ -8,10 +8,14 @@ requirements:
   - setuptools
   run:
   - fastcore==1.3.19
+  - gensim==3.8.0
   - nbdev==1.1.12
   - nbformat==5.0.8
   - nbqa==0.5.6
   - networkx==2.5
+  - newday_nexus_data_access==0.6.4
+  - numpy==1.19.2
   - pandas==0.25.3
+  - top2vec==1.0.23
 source:
   path: /home/jovyan/git/sciflow
