--- a/settings.ini
+++ b/settings.ini
@@ -21,6 +21,7 @@ console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
 	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
 	sciflow_generate=sciflow.metaflow:sciflow_generate
+	sciflow_check_flows=sciflow.metaflow:sciflow_check_flows
 nbs_path = nbs
 doc_path = docs
 root_path = .
