--- a/settings.ini
+++ b/settings.ini
@@ -22,6 +22,7 @@ console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
 	sciflow_generate=sciflow.metaflow:sciflow_generate
 	sciflow_check_flows=sciflow.metaflow:sciflow_check_flows
+	sciflow_run_flows=sciflow.metaflow:sciflow_run_flows
 nbs_path = nbs
 doc_path = docs
 root_path = .
