--- a/nbs/test/meta.yaml
+++ b/nbs/test/meta.yaml
@@ -1,21 +1,25 @@
 package:
   name: sciflow
-  version: 0.0.2
+  version: 0.0.3
 requirements:
   host:
   - pip
   - python
   - setuptools
   run:
+  - PyYAML==5.4.1
+  - boto3==1.17.46
+  - botocore==1.20.50
   - fastcore==1.3.19
-  - gensim==3.8.0
+  - incense==0.0.11
   - nbdev==1.1.12
   - nbformat==5.0.8
   - nbqa==0.5.6
   - networkx==2.5
-  - newday_nexus_data_access==0.6.4
+  - newday_nexus_data_access==0.4.21
   - numpy==1.19.2
   - pandas==0.25.3
-  - top2vec==1.0.23
+  - pyrsistent==0.17.3
+  - sacred==0.8.2
 source:
-  path: /home/jovyan/git/sciflow
+  path: /home/centos/git/sciflow
