--- a/nbs/test/settings.ini
+++ b/nbs/test/settings.ini
@@ -29,5 +29,5 @@ git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
 lib_path = %(lib_name)s
 title = %(lib_name)s
 tst_flags = slow|vis
-requirements = PyYAML==5.4.1 boto3==1.17.46 botocore==1.20.50 fastcore==1.3.19 incense==0.0.11 nbdev==1.1.12 nbformat==5.0.8 nbqa==0.5.6 networkx==2.5 newday_nexus_data_access==0.4.21 numpy==1.19.2 pandas==0.25.3 pyrsistent==0.17.3 sacred==0.8.2
+requirements = boto3==1.16.48 botocore==1.19.63 fastcore==1.3.19 incense==0.0.11 nbdev==1.1.12 nbformat==5.0.8 nbqa==0.5.6 networkx==2.5 newday_nexus_data_access==0.6.4 numpy==1.19.2 pandas==0.25.3 pyrsistent==0.17.3 sacred==0.8.2
 
