--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 host = bitbucket
 lib_name = sciflow
-company_name = NewDay
+company_name = NewDay Technology
 user = {user}
 description = This library bridges the gap between research and production for Data Science.
 keywords = research, production, exploration
@@ -11,12 +11,11 @@ copyright = NewDay Technology.
 branch = {branch}
 version = 0.0.3
 min_python = 3.7
-audience = Developers
+audience = Data Science Teams
 language = English
 custom_sidebar = False
 license = apache2
 status = 2
-bucket = pprsandboxpdlras3
 console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
 	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
@@ -28,11 +27,12 @@ doc_path = docs
 root_path = .
 flows_path = nbs/test/flows
 recursive = False
-doc_host = https://{user}.github.io
+doc_host = https://newdaytechnology.github.io
 doc_baseurl = /sciflow/
-git_url = https://github.com/{user}/sciflow/tree/{branch}/
+git_url = https://github.com/newdaytechnology/sciflow/tree/{branch}/
 lib_path = sciflow
 title = sciflow
 tst_flags = slow|vis
 requirements = fastcore==1.3.19 nbdev==1.1.12 nbformat==5.0.8 nbqa==0.5.6 networkx==2.5 pandas==0.25.3
+bucket = pprsandboxpdlras3
 
