Switched to returning dict from steps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,6 @@ autoflake = ["--in-place",
              "--remove-all-unused-imports",
              "--remove-unused-variables"
             ]
+            
+[tool.isort]
+profile = "black"
