Added sciflow clean

--- a/settings.ini
+++ b/settings.ini
@@ -17,6 +17,7 @@ custom_sidebar = False
 license = apache2
 status = 2
 console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
+	sciflow_clean=sciflow.utils:sciflow_clean
 	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
 	sciflow_generate=sciflow.metaflow:sciflow_generate
