--- a/settings.ini
+++ b/settings.ini
@@ -36,4 +36,4 @@ title = sciflow
 tst_flags = slow|vis
 requirements = fastcore==1.3.19 nbdev==1.1.12 nbformat==5.0.8 nbqa==0.5.6 networkx==2.5 pandas==0.25.3
 bucket = pprsandboxpdlras3
-
+bucket_table_alias = ra_s3
