--- a/nbs/test/meta.yaml
+++ b/nbs/test/meta.yaml
@@ -20,5 +20,7 @@ requirements:
   - pandas==0.25.3
   - pyrsistent==0.17.3
   - sacred==0.8.2
+  - tinydb==4.4.0
+  - turbodbc==3.3.0
 source:
   path: /home/jovyan/git/sciflow
