--- a/nbs/test/requirements-generated.txt
+++ b/nbs/test/requirements-generated.txt
@@ -9,17 +9,20 @@ boto3 == 1.16.48
 botocore == 1.19.63
 
 # sciflow/export_named.py: 14
-# sciflow/metaflow.py: 16
+# sciflow/metaflow.py: 19
 # sciflow/packaging.py: 18
 # sciflow/scilint.py: 10
 # sciflow/utils.py: 12
 fastcore == 1.3.19
 
 # sciflow/lake_experiment.py: 11
+# sciflow/lake_experiment_loader.py: 13,14
 incense == 0.0.11
 
 # sciflow/export_named.py: 15
-# sciflow/metaflow.py: 17
+# sciflow/lake_experiment_loader.py: 15
+# sciflow/lake_observer.py: 12
+# sciflow/metaflow.py: 20
 # sciflow/packaging.py: 19
 # sciflow/params.py: 14
 # sciflow/parse_module.py: 17
@@ -40,6 +43,7 @@ networkx == 2.5
 newday_nexus_data_access == 0.6.4
 
 # sciflow/data_handler.py: 14
+# sciflow/lake_experiment_loader.py: 11
 # sciflow/test/test_clustering.py: 18
 # sciflow/test/test_clustering_no_params.py: 16
 # sciflow/test/test_data_handling.py: 11
@@ -48,6 +52,7 @@ numpy == 1.19.2
 
 # sciflow/data_handler.py: 15
 # sciflow/lake_experiment.py: 10
+# sciflow/lake_experiment_loader.py: 12
 # sciflow/lake_observer.py: 11
 # sciflow/parse_module.py: 16
 # sciflow/test/test_clustering.py: 19
@@ -59,5 +64,11 @@ pandas == 0.25.3
 # sciflow/lake_experiment.py: 12
 pyrsistent == 0.17.3
 
-# sciflow/lake_observer.py: 12,13,14
+# sciflow/lake_observer.py: 13,14,15
 sacred == 0.8.2
+
+# sciflow/lake_experiment_loader.py: 18,19
+tinydb == 4.4.0
+
+# sciflow/lake_experiment_loader.py: 20
+turbodbc == 3.3.0
