--- a/nbs/test/meta.yaml
+++ b/nbs/test/meta.yaml
@@ -1,26 +1,26 @@
 package:
   name: sciflow
-  version: 0.0.3
+  version: 0.0.4
 requirements:
   host:
   - pip
   - python
   - setuptools
   run:
-  - boto3==1.16.48
-  - botocore==1.19.63
+  - PyYAML==5.4.1
+  - boto3==1.17.46
+  - botocore==1.20.50
   - fastcore==1.3.19
   - incense==0.0.11
-  - nbdev==1.1.12
-  - nbformat==5.0.8
-  - nbqa==0.5.6
-  - networkx==2.5
-  - newday_nexus_data_access==0.6.4
+  - nbdev==1.1.14
+  - nbformat==5.1.3
+  - nbqa==0.6.0
+  - networkx==2.5.1
+  - newday_nexus_data_access==0.4.21
   - numpy==1.19.2
-  - pandas==0.25.3
+  - pandas==1.2.3
   - pyrsistent==0.17.3
   - sacred==0.8.2
-  - tinydb==4.4.0
   - turbodbc==3.3.0
 source:
   path: /home/jovyan/git/sciflow
