--- a/settings.ini
+++ b/settings.ini
@@ -9,7 +9,7 @@ author = {author}
 author_email = {author_email}
 copyright = NewDay Technology.
 branch = {branch}
-version = 0.0.3
+version = 0.0.4
 min_python = 3.7
 audience = Data Science Teams
 language = English
@@ -19,6 +19,7 @@ status = 2
 console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
 	sciflow_clean=sciflow.utils:sciflow_clean
 	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
+	sciflow_update_reqs=sciflow.packaging:sciflow_update_reqs
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
 	sciflow_generate=sciflow.metaflow:sciflow_generate
 	sciflow_check_flows=sciflow.metaflow:sciflow_check_flows
@@ -34,6 +35,7 @@ git_url = https://github.com/newdaytechnology/sciflow/tree/{branch}/
 lib_path = sciflow
 title = sciflow
 tst_flags = slow|vis
-requirements = fastcore==1.3.19 nbdev==1.1.12 nbformat==5.0.8 nbqa==0.5.6 networkx==2.5 pandas==0.25.3
+requirements = PyYAML==5.4.1 boto3==1.17.46 botocore==1.20.50 fastcore==1.3.19 incense==0.0.11 nbdev==1.1.14 nbformat==5.1.3 nbqa==0.6.0 networkx==2.5.1 newday_nexus_data_access==0.4.21 numpy==1.19.2 pandas==1.2.3 pyrsistent==0.17.3 sacred==0.8.2 turbodbc==3.3.0
 bucket = pprsandboxpdlras3
 bucket_table_alias = ra_s3
+
