--- a/nbs/test/meta.yaml
+++ b/nbs/test/meta.yaml
@@ -16,11 +16,11 @@ requirements:
   - nbformat==5.1.3
   - nbqa==0.6.0
   - networkx==2.5.1
-  - newday_nexus_data_access==0.4.21
   - numpy==1.19.2
   - pandas==1.2.3
   - pyrsistent==0.17.3
   - sacred==0.8.2
+  - tinydb==4.4.0
   - turbodbc==3.3.0
 source:
   path: /home/jovyan/git/sciflow
