--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,11 @@
+#TODO come back to thsi once on gituhb
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
-    hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
--   repo: https://github.com/psf/black
-    rev: 19.3b0
-    hooks:
-    -   id: black
+- repo: https://donal_simmie@bitbucket.org/newdaydigitaldevelopment/sciflow.git
+  rev: 0.0.4
+  hooks:
+   - id: nbqa-black
+     additional_dependencies: [black==20.8b1]
+   - id: nbqa-pyupgrade
+     additional_dependencies: [pyupgrade==2.7.3]
+   - id: nbqa-isort
+     additional_dependencies: [isort==5.6.4]
