--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,8 @@ dependencies:
   - ipykernel
   - turbodbc
   - boto3
+  - s3fs=0.5.1
+  - fsspec=0.8.3
   - nbformat
   - pyyaml
   - nbconvert=5.6.1
@@ -18,14 +20,18 @@ dependencies:
   - papermill
   - notebook
   - black
-  - nbqa
+  - nbqa=0.6.1
   - pylint
   - isort
   - autoflake
   - pre_commit
+  - mamba
+  - boa
+  - conda-verify
   - numba
   - cython
   - pigar
+  - twine
   - networkx
   - graphviz
   - pyrsistent
