--- a/meta.yaml
+++ b/meta.yaml
@@ -14,13 +14,13 @@ requirements:
   - incense==0.0.11
   - nbdev==1.1.14
   - nbformat==5.1.3
-  - nbqa==0.6.0
+  - nbqa==0.6.1
   - networkx==2.5.1
-  - newday_nexus_data_access==0.4.21
-  - numpy==1.19.2
-  - pandas==1.2.3
+  - numpy==1.20.1
+  - pandas==1.2.4
   - pyrsistent==0.17.3
   - sacred==0.8.2
-  - turbodbc==3.3.0
+  - tinydb==4.4.0
+  - turbodbc==4.1.2
 source:
   path: /home/jovyan/git/sciflow
