--- a/nbs/test/settings.ini
+++ b/nbs/test/settings.ini
@@ -29,5 +29,5 @@ git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
 lib_path = %(lib_name)s
 title = %(lib_name)s
 tst_flags = slow|vis
-requirements = PyYAML==5.4.1 boto3==1.17.46 botocore==1.20.50 fastcore==1.3.19 incense==0.0.11 nbdev==1.1.14 nbformat==5.1.3 nbqa==0.6.0 networkx==2.5.1 numpy==1.19.2 pandas==1.2.3 pyrsistent==0.17.3 sacred==0.8.2 turbodbc==3.3.0
+requirements = PyYAML==5.4.1 boto3==1.17.46 botocore==1.20.50 fastcore==1.3.19 incense==0.0.11 nbdev==1.1.14 nbformat==5.1.3 nbqa==0.6.1 networkx==2.5.1 numpy==1.20.1 pandas==1.2.4 pyrsistent==0.17.3 sacred==0.8.2 tinydb==4.4.0 turbodbc==4.1.2
 
