--- a/requirements-generated.txt
+++ b/requirements-generated.txt
@@ -4,7 +4,7 @@
 PyYAML == 5.4.1
 
 # sciflow/experiment/lake_experiment.py: 9
-# sciflow/experiment/lake_observer.py: 10
+# sciflow/experiment/lake_observer.py: 11
 # sciflow/s3_utils.py: 12
 boto3 == 1.17.46
 
@@ -12,23 +12,23 @@ boto3 == 1.17.46
 botocore == 1.20.50
 
 # sciflow/export_named.py: 14
-# sciflow/metaflow.py: 21
+# sciflow/metaflow.py: 22
 # sciflow/packaging.py: 18
 # sciflow/scilint.py: 10
-# sciflow/utils.py: 13
+# sciflow/utils.py: 11
 fastcore == 1.3.19
 
 # sciflow/experiment/lake_experiment.py: 11
-# sciflow/experiment/lake_experiment_loader.py: 13,14
+# sciflow/experiment/lake_experiment_loader.py: 14,15
 incense == 0.0.11
 
-# sciflow/experiment/lake_experiment_loader.py: 15
+# sciflow/experiment/lake_experiment_loader.py: 16
 # sciflow/export_named.py: 15
-# sciflow/metaflow.py: 22
+# sciflow/metaflow.py: 23
 # sciflow/packaging.py: 19
 # sciflow/params.py: 14
 # sciflow/parse_module.py: 17
-# sciflow/utils.py: 11,14
+# sciflow/utils.py: 10,12
 nbdev == 1.1.14
 
 # sciflow/export_named.py: 13,34
@@ -36,38 +36,39 @@ nbdev == 1.1.14
 nbformat == 5.1.3
 
 # sciflow/scilint.py: 11,12,13
-# sciflow/utils.py: 15
-nbqa == 0.6.0
+# sciflow/utils.py: 13
+nbqa == 0.6.1
 
 # sciflow/parse_module.py: 15
 networkx == 2.5.1
 
-# sciflow/utils.py: 12
-newday_nexus_data_access == 0.4.21
-
 # sciflow/data_handler.py: 14
-# sciflow/experiment/lake_experiment_loader.py: 11
+# sciflow/experiment/lake_experiment_loader.py: 12
 # sciflow/test/test_clustering.py: 16
 # sciflow/test/test_clustering_no_params.py: 16
 # sciflow/test/test_data_handling.py: 11
-numpy == 1.19.2
+numpy == 1.20.1
 
 # sciflow/data_handler.py: 15
 # sciflow/experiment/lake_experiment.py: 10
-# sciflow/experiment/lake_experiment_loader.py: 12
-# sciflow/experiment/lake_observer.py: 11
-# sciflow/metaflow.py: 20
+# sciflow/experiment/lake_experiment_loader.py: 13
+# sciflow/experiment/lake_observer.py: 12
+# sciflow/metaflow.py: 21
 # sciflow/parse_module.py: 16
 # sciflow/test/test_clustering.py: 17
 # sciflow/test/test_clustering_no_params.py: 17
 # sciflow/test/test_data_handling.py: 12
-pandas == 1.2.3
+pandas == 1.2.4
 
 # sciflow/experiment/lake_experiment.py: 12
 pyrsistent == 0.17.3
 
-# sciflow/experiment/lake_observer.py: 12,13,14
+# sciflow/experiment/lake_observer.py: 13,14,15
 sacred == 0.8.2
 
-# sciflow/experiment/lake_experiment_loader.py: 20
-turbodbc == 3.3.0
+# sciflow/experiment/lake_experiment_loader.py: 19,20
+tinydb == 4.4.0
+
+# sciflow/experiment/lake_experiment_loader.py: 21
+# sciflow/utils.py: 14
+turbodbc == 4.1.2
