--- a/requirements-generated.txt
+++ b/requirements-generated.txt
@@ -15,7 +15,7 @@ botocore == 1.20.50
 # sciflow/metaflow.py: 22
 # sciflow/packaging.py: 18
 # sciflow/scilint.py: 10
-# sciflow/utils.py: 11
+# sciflow/utils.py: 13
 fastcore == 1.3.19
 
 # sciflow/experiment/lake_experiment.py: 11
@@ -28,7 +28,7 @@ incense == 0.0.11
 # sciflow/packaging.py: 19
 # sciflow/params.py: 14
 # sciflow/parse_module.py: 17
-# sciflow/utils.py: 10,12
+# sciflow/utils.py: 10,14
 nbdev == 1.1.14
 
 # sciflow/export_named.py: 13,34
@@ -36,7 +36,7 @@ nbdev == 1.1.14
 nbformat == 5.1.3
 
 # sciflow/scilint.py: 11,12,13
-# sciflow/utils.py: 13
+# sciflow/utils.py: 15
 nbqa == 0.6.1
 
 # sciflow/parse_module.py: 15
@@ -51,14 +51,18 @@ numpy == 1.20.1
 
 # sciflow/data_handler.py: 15
 # sciflow/experiment/lake_experiment.py: 10
-# sciflow/experiment/lake_experiment_loader.py: 13
+# sciflow/experiment/lake_experiment_loader.py: 13,17
 # sciflow/experiment/lake_observer.py: 12
 # sciflow/metaflow.py: 21
 # sciflow/parse_module.py: 16
 # sciflow/test/test_clustering.py: 17
 # sciflow/test/test_clustering_no_params.py: 17
 # sciflow/test/test_data_handling.py: 12
+# sciflow/utils.py: 11
 pandas == 1.2.4
+
+# sciflow/utils.py: 12
+pyodbc == 4.0.31
 
 # sciflow/experiment/lake_experiment.py: 12
 pyrsistent == 0.17.3
@@ -66,9 +70,5 @@ pyrsistent == 0.17.3
 # sciflow/experiment/lake_observer.py: 13,14,15
 sacred == 0.8.2
 
-# sciflow/experiment/lake_experiment_loader.py: 19,20
+# sciflow/experiment/lake_experiment_loader.py: 20,21
 tinydb == 4.4.0
-
-# sciflow/experiment/lake_experiment_loader.py: 21
-# sciflow/utils.py: 14
-turbodbc == 4.1.2
