--- a/settings.ini
+++ b/settings.ini
@@ -17,7 +17,7 @@ custom_sidebar = False
 license = apache2
 status = 2
 console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
-	sciflow_clean=sciflow.utils:sciflow_clean
+	sciflow_clean=sciflow.clean:sciflow_clean
 	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
 	sciflow_update_reqs=sciflow.packaging:sciflow_update_reqs
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
