--- a/examples/settings.ini
+++ b/examples/settings.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
 host = github
-lib_name = sciflow
+lib_name = sciflow_examples
 company_name = NewDay Technology
 user = NewDayTechnology
 description = This library bridges the gap between research and production for Data Science.
@@ -24,16 +24,16 @@ console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
 	sciflow_generate=sciflow.metaflow:sciflow_generate
 	sciflow_check_flows=sciflow.metaflow:sciflow_check_flows
 	sciflow_run_flows=sciflow.metaflow:sciflow_run_flows
-nbs_path = nbs
+nbs_path = .
 doc_path = docs
 root_path = .
-flows_path = nbs/test/flows
+flows_path = .
 recursive = False
 doc_host = https://newdaytechnology.github.io
 doc_baseurl = /sciflow/
 git_url = https://github.com/newdaytechnology/sciflow/tree/{branch}/
-lib_path = sciflow
-title = sciflow
-tst_flags = slow|vis
+lib_path = sciflow_examples
+title = sciflow_examples
+tst_flags = slow|vis|tst
 requirements = PyYAML==5.4.1 boto3==1.17.46 botocore==1.20.106 fastcore==1.3.26 incense==0.0.11 nbdev==1.1.20 nbformat==5.1.3 nbqa==0.6.1 networkx==2.6.2 numpy==1.20.1 pandas==1.2.4 pyodbc==4.0.31 pyrsistent==0.17.3 sacred==0.8.2 tinydb==4.4.0
 
