Added flows dir to gitignore

--- a/examples/settings.ini
+++ b/examples/settings.ini
@@ -27,7 +27,7 @@ console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
 nbs_path = .
 doc_path = docs
 root_path = .
-flows_path = .
+flows_path = flows
 recursive = False
 doc_host = https://newdaytechnology.github.io
 doc_baseurl = /sciflow/
