--- a/templates/settings.ini
+++ b/templates/settings.ini
@@ -1,17 +1,17 @@
 [DEFAULT]
 host = github
-lib_name = sciflow
-company_name = NewDay Technology
-user = NewDayTechnology
-description = This library bridges the gap between research and production for Data Science.
-keywords = research, production, exploration
-author = Donal Simmie
-author_email = oss@newday.co.uk
-copyright = NewDay Technology.
+lib_name = {library}
+company_name = {company}
+user = {user}
+description = {This library bridges the gap between research and production for Data Science.}
+keywords = {comma,separated,keywords}
+author = {author}
+author_email = {email}
+copyright = {company/author name}
 branch = main
 version = 0.0.1
 min_python = 3.7
-audience = Data Science Teams
+audience = {audience}
 language = English
 custom_sidebar = False
 license = apache2
@@ -28,12 +28,12 @@ nbs_path = nbs
 doc_path = docs
 root_path = .
 flows_path = nbs/test/flows
-recursive = True
+recursive = False
 doc_host = https://newdaytechnology.github.io
 doc_baseurl = /sciflow/
 git_url = https://github.com/newdaytechnology/sciflow/tree/{branch}/
 lib_path = sciflow
 title = sciflow
-tst_flags = slow|vis
+tst_flags = slow|vis|tst
 requirements = PyYAML==5.4.1 boto3==1.17.46 botocore==1.20.106 fastcore==1.3.26 incense==0.0.11 nbdev==1.1.20 nbformat==5.1.3 nbqa==0.6.1 networkx==2.6.2 numpy==1.20.1 pandas==1.2.4 pyodbc==4.0.31 pyrsistent==0.17.3 sacred==0.8.2 tinydb==4.4.0
 
