--- a/nbs/test/settings.ini
+++ b/nbs/test/settings.ini
@@ -29,5 +29,5 @@ git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
 lib_path = %(lib_name)s
 title = %(lib_name)s
 tst_flags = slow|vis
-requirements = PyYAML==5.4.1 boto3==1.17.46 botocore==1.20.106 fastcore==1.3.26 incense==0.0.11 nbdev==1.1.20 nbformat==5.1.3 nbqa==0.6.1 networkx==2.6.2 numpy==1.20.1 pandas==1.2.4 pyodbc==4.0.31 pyrsistent==0.17.3 sacred==0.8.2 tinydb==4.4.0
+requirements = PyYAML==6.0 boto3==1.21.4 botocore==1.24.4 fastcore==1.3.27 ipython==8.0.1 nbdev==1.2.0 nbformat==5.1.3 nbqa==1.2.3 networkx==2.6.3 numpy==1.21.5 pandas==1.4.1 pyodbc==4.0.32 pyrsistent==0.18.1 sacred==0.8.2 tinydb==4.7.0
 
