Added init command

--- a/settings.ini
+++ b/settings.ini
@@ -16,7 +16,8 @@ language = English
 custom_sidebar = False
 license = apache2
 status = 2
-console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
+console_scripts = sciflow_init=sciflow.init:sciflow_init
+	sciflow_tidy=sciflow.scilint:sciflow_tidy
 	sciflow_clean=sciflow.clean:sciflow_clean
 	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
 	sciflow_update_reqs=sciflow.packaging:sciflow_update_reqs
