--- a/settings.ini
+++ b/settings.ini
@@ -22,9 +22,9 @@ console_scripts = sciflow_init=sciflow.init:sciflow_init
 	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
 	sciflow_update_reqs=sciflow.packaging:sciflow_update_reqs
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
-	sciflow_generate=sciflow.metaflow:sciflow_generate
-	sciflow_check_flows=sciflow.metaflow:sciflow_check_flows
-	sciflow_run_flows=sciflow.metaflow:sciflow_run_flows
+	sciflow_generate=sciflow.to_metaflow:sciflow_generate
+	sciflow_check_flows=sciflow.to_metaflow:sciflow_check_flows
+	sciflow_run_flows=sciflow.to_metaflow:sciflow_run_flows
 nbs_path = nbs
 doc_path = docs
 root_path = .
