--- a/settings.ini
+++ b/settings.ini
@@ -22,7 +22,8 @@ console_scripts = sciflow_init=sciflow.init:sciflow_init
 	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
 	sciflow_update_reqs=sciflow.packaging:sciflow_update_reqs
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
-	sciflow_generate=sciflow.to_metaflow:sciflow_generate
+	sciflow_metaflow=sciflow.to_metaflow:sciflow_metaflow
+	sciflow_sagemaker=sciflow.to_sagemaker:sciflow_sagemaker
 	sciflow_check_flows=sciflow.to_metaflow:sciflow_check_flows
 	sciflow_run_flows=sciflow.to_metaflow:sciflow_run_flows
 nbs_path = nbs
