Remvoed flow runnign from to_metaflow. Added metaflow + sagemaker commands

--- a/settings.ini
+++ b/settings.ini
@@ -24,8 +24,10 @@ console_scripts = sciflow_init=sciflow.init:sciflow_init
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
 	sciflow_metaflow=sciflow.to_metaflow:sciflow_metaflow
 	sciflow_sagemaker=sciflow.to_sagemaker:sciflow_sagemaker
-	sciflow_check_flows=sciflow.to_metaflow:sciflow_check_flows
-	sciflow_run_flows=sciflow.to_metaflow:sciflow_run_flows
+	sciflow_check_metaflows=sciflow.run_flows:sciflow_check_metaflows
+	sciflow_run_metaflows=sciflow.run_flows:sciflow_run_metaflows
+	sciflow_check_sagemaker_flows=sciflow.run_flows:sciflow_check_sagemaker_flows
+	sciflow_run_sagemaker_flows=sciflow.run_flows:sciflow_run_sagemaker_flows
 nbs_path = nbs
 doc_path = docs
 root_path = .
