--- a/meta.yaml
+++ b/meta.yaml
@@ -8,6 +8,7 @@ requirements:
   - setuptools
   run:
   - PyYAML==6.0
+  - astunparse==1.6.3
   - boto3==1.21.4
   - botocore==1.24.4
   - fastcore==1.3.27
