--- a/settings.ini
+++ b/settings.ini
@@ -39,5 +39,5 @@ git_url = https://github.com/newdaytechnology/sciflow/tree/{branch}/
 lib_path = sciflow
 title = sciflow
 tst_flags = slow|vis
-requirements = PyYAML==6.0 boto3==1.21.4 botocore==1.24.4 fastcore==1.3.27 ipython==8.0.1 nbdev==1.2.0 nbformat==5.1.3 nbqa==1.2.3 networkx==2.6.3 numpy==1.21.5 pandas==1.4.1 pyodbc==4.0.32 pyrsistent==0.18.1 sacred==0.8.2 tinydb==4.7.0
+requirements = PyYAML==6.0 astunparse==1.6.3 boto3==1.21.4 botocore==1.24.4 fastcore==1.3.27 ipython==8.0.1 nbdev==1.2.0 nbformat==5.1.3 nbqa==1.2.3 networkx==2.6.3 numpy==1.21.5 pandas==1.4.1 pyodbc==4.0.32 pyrsistent==0.18.1 sacred==0.8.2 tinydb==4.7.0
 
