Fixed scilint script exports

--- a/settings.ini
+++ b/settings.ini
@@ -18,6 +18,7 @@ license = apache2
 status = 2
 console_scripts = sciflow_init=sciflow.init:sciflow_init
 	sciflow_tidy=sciflow.scilint:sciflow_tidy
+	sciflow_lint=sciflow.scilint:sciflow_lint
 	sciflow_clean=sciflow.clean:sciflow_clean
 	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
 	sciflow_update_reqs=sciflow.packaging:sciflow_update_reqs
