--- a/examples/Makefile
+++ b/examples/Makefile
@@ -43,22 +43,29 @@ build:
 	sciflow_build_lib && \
 	nbdev_test_nbs --pause=3 && \
 	sciflow_tidy && \
-	sciflow_generate && \
-	sciflow_check_flows && \
+	sciflow_lint && \
+	sciflow_metaflow && \
+	sciflow_sagemaker && \
+	sciflow_check_metaflows && \
+	sciflow_check_sagemaker_flows && \
 	echo "Build completed"
     
 run: build
 	source "$${HOME}/.sciflow/env" && \
-	sciflow_run_flows && \
+	sciflow_run_metaflows && \
 	echo "Flow run checks completed"
     
 precommit:
+	source "$${HOME}/.sciflow/env" && \
 	sciflow_build_lib && \
 	nbdev_test_nbs --pause=3 && \
 	sciflow_tidy && \
 	sciflow_clean && \
-	sciflow_generate && \
-	sciflow_check_flows && \
+	sciflow_lint && \
+	sciflow_metaflow && \
+	sciflow_sagemaker && \
+	sciflow_check_metaflows && \
+	sciflow_check_sagemaker_flows && \
 	echo "Precommit checks completed"
 
 release: pypi conda_release
