--- a/examples/settings.ini
+++ b/examples/settings.ini
@@ -16,24 +16,29 @@ language = English
 custom_sidebar = False
 license = apache2
 status = 2
-console_scripts = sciflow_tidy=sciflow.scilint:sciflow_tidy
+console_scripts = sciflow_init=sciflow.init:sciflow_init
+	sciflow_tidy=sciflow.scilint:sciflow_tidy
+	sciflow_lint=sciflow.scilint:sciflow_lint
 	sciflow_clean=sciflow.clean:sciflow_clean
 	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
 	sciflow_update_reqs=sciflow.packaging:sciflow_update_reqs
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
-	sciflow_generate=sciflow.metaflow:sciflow_generate
-	sciflow_check_flows=sciflow.metaflow:sciflow_check_flows
-	sciflow_run_flows=sciflow.metaflow:sciflow_run_flows
+	sciflow_metaflow=sciflow.to_metaflow:sciflow_metaflow
+	sciflow_sagemaker=sciflow.to_sagemaker:sciflow_sagemaker
+	sciflow_check_metaflows=sciflow.run_flow:sciflow_check_metaflows
+	sciflow_run_metaflows=sciflow.run_flow:sciflow_run_metaflows
+	sciflow_check_sagemaker_flows=sciflow.run_flow:sciflow_check_sagemaker_flows
+	sciflow_run_sagemaker_flows=sciflow.run_flow:sciflow_run_sagemaker_flows
 nbs_path = .
 doc_path = docs
 root_path = .
 flows_path = flows
-recursive = False
+recursive = True
 doc_host = https://newdaytechnology.github.io
-doc_baseurl = /sciflow/
+doc_baseurl = /sciflow_examples/
 git_url = https://github.com/newdaytechnology/sciflow/tree/{branch}/
 lib_path = sciflow_examples
 title = sciflow_examples
 tst_flags = slow|vis|tst
-requirements = PyYAML==5.4.1 boto3==1.17.46 botocore==1.20.106 fastcore==1.3.26 incense==0.0.11 nbdev==1.1.20 nbformat==5.1.3 nbqa==0.6.1 networkx==2.6.2 numpy==1.20.1 pandas==1.2.4 pyodbc==4.0.31 pyrsistent==0.17.3 sacred==0.8.2 tinydb==4.4.0
+requirements = PyYAML==6.0 boto3==1.21.4 botocore==1.24.4 fastcore==1.3.27 ipython==8.0.1 nbdev==1.2.0 nbformat==5.1.3 nbqa==1.2.3 networkx==2.6.3 numpy==1.22.0 pandas==1.4.1 pyodbc==4.0.32 pyrsistent==0.18.1 sacred==0.8.2 tinydb==4.7.0
 
