Added draft banner ileted lake_observer; Added missing dependencies to settings.ini

--- a/environment.yml
+++ b/environment.yml
@@ -38,8 +38,8 @@ dependencies:
   - pyrsistent
   - dvc
   - metaflow
+  - sagemaker
   - tinydb
   - pip
   - pip:
       - sacred
-      - incense
