[WIP] in-flight version1 rewrite, simplifying and migrating to nbdev2

--- a/settings.ini
+++ b/settings.ini
@@ -17,11 +17,7 @@ custom_sidebar = False
 license = apache2
 status = 2
 console_scripts = sciflow_init=sciflow.init:sciflow_init
-	sciflow_tidy=sciflow.scilint:sciflow_tidy
-	sciflow_lint=sciflow.scilint:sciflow_lint
-	sciflow_clean=sciflow.clean:sciflow_clean
-	sciflow_build_lib=sciflow.export_named:sciflow_build_lib
-	sciflow_update_reqs=sciflow.packaging:sciflow_update_reqs
+	sciflow_export=sciflow.export_step:sciflow_export
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
 	sciflow_metaflow=sciflow.to_metaflow:sciflow_metaflow
 	sciflow_sagemaker=sciflow.to_sagemaker:sciflow_sagemaker
@@ -40,9 +36,5 @@ git_url = https://github.com/newdaytechnology/sciflow/tree/{branch}/
 lib_path = sciflow
 title = sciflow
 tst_flags = slow|vis
-requirements = PyYAML==6.0 boto3==1.21.4 botocore==1.24.4 fastcore==1.3.27 ipython==8.0.1 nbdev==1.2.0 nbformat==5.1.3 nbqa==1.2.3 networkx==2.6.3 numpy==1.22.0 pandas==1.4.1 pyodbc==4.0.32 pyrsistent==0.18.1 sacred==0.8.2 tinydb==4.7.0 sagemaker==2.76.0 metaflow==2.5.2 black==22.1.0 isort==5.10.1 autoflake==1.4 pigar==0.10.0
-
-# Add CLI deps
-# Auto-detect sagemaker/metaflow?
-
+requirements = PyYAML boto3 botocore fastcore ipython nbdev nbformat numpy pandas sagemaker metaflow pigar
 
