--- a/nbs/test/meta.yaml
+++ b/nbs/test/meta.yaml
@@ -7,20 +7,20 @@ requirements:
   - python
   - setuptools
   run:
-  - PyYAML==6.0
-  - boto3==1.21.4
-  - botocore==1.24.4
-  - fastcore==1.3.27
-  - ipython==8.0.1
-  - nbdev==1.2.0
-  - nbformat==5.1.3
-  - nbqa==1.2.3
-  - networkx==2.6.3
-  - numpy==1.22.0
-  - pandas==1.4.1
-  - pyodbc==4.0.32
-  - pyrsistent==0.18.1
-  - sacred==0.8.2
-  - tinydb==4.7.0
+  - boto3==1.28.61
+  - execnb==0.1.5
+  - fastcore==1.5.29
+  - joblib==1.3.2
+  - metaflow==2.10.0
+  - nbdev==2.3.12
+  - nbformat==5.8.0
+  - nbqa==1.7.0
+  - numpy==1.24.3
+  - pandas==2.0.1
+  - pigar==2.1.1
+  - PyYAML==6.0.1
+  - sagemaker==2.191.0
+  - -egit+https://github.com/NewDay-Data/sciflow.git@99387dd2f61ba478029ae3f417456d14cebdd262#egg=sciflow
+  - scilint==0.2.1
 source:
   path: /home/sagemaker-user/git/sciflow
