--- a/settings.ini
+++ b/settings.ini
@@ -10,7 +10,7 @@ author_email = oss@newday.co.uk
 copyright = NewDay Technology.
 branch = main
 version = 0.0.1
-min_python = 3.7
+min_python = 3.8
 audience = Data Science Teams
 language = English
 custom_sidebar = False
@@ -19,8 +19,8 @@ status = 2
 console_scripts = sciflow_init=sciflow.init:sciflow_init
 	sciflow_export=sciflow.export_step:sciflow_export
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
-	sciflow_metaflow=sciflow.to_metaflow:sciflow_metaflow
-	sciflow_sagemaker=sciflow.to_sagemaker:sciflow_sagemaker
+	sciflow_metaflow=sciflow.converters.to_metaflow:sciflow_metaflow
+	sciflow_sagemaker=sciflow.converters.to_sagemaker:sciflow_sagemaker
 	sciflow_check_metaflows=sciflow.run_flow:sciflow_check_metaflows
 	sciflow_run_metaflows=sciflow.run_flow:sciflow_run_metaflows
 	sciflow_check_sagemaker_flows=sciflow.run_flow:sciflow_check_sagemaker_flows
@@ -35,6 +35,9 @@ doc_baseurl = /sciflow/
 git_url = https://github.com/newdaytechnology/sciflow/tree/{branch}/
 lib_path = sciflow
 title = sciflow
-tst_flags = slow|vis
+tst_flags = notest
+allowed_metadata_keys = tags
+allowed_cell_metadata_keys = tags
+black_formatting = True
 requirements = PyYAML boto3 botocore fastcore ipython nbdev nbformat numpy pandas sagemaker metaflow pigar
 
