--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,8 @@ metaflow==2.10.0
 nbdev==2.3.12
 nbformat==5.8.0
 nbqa==1.7.0
-numpy==1.24.3
-pandas==2.0.1
+numpy==1.24.1
+pandas==1.1.3
 PyYAML==6.0.1
 sagemaker==2.191.0
+scilint==0.2.2
