--- a/settings.ini
+++ b/settings.ini
@@ -21,10 +21,10 @@ console_scripts = sciflow_init=sciflow.init:sciflow_init
 	sciflow_prepare=sciflow.packaging:sciflow_prepare
 	sciflow_metaflow=sciflow.converters.to_metaflow:sciflow_metaflow
 	sciflow_sagemaker=sciflow.converters.to_sagemaker:sciflow_sagemaker
-	sciflow_check_metaflows=sciflow.run_flow:sciflow_check_metaflows
-	sciflow_run_metaflows=sciflow.run_flow:sciflow_run_metaflows
-	sciflow_check_sagemaker_flows=sciflow.run_flow:sciflow_check_sagemaker_flows
-	sciflow_run_sagemaker_flows=sciflow.run_flow:sciflow_run_sagemaker_flows
+	sciflow_check_metaflows=sciflow.run_sequential:sciflow_check_metaflows
+	sciflow_run_metaflows=sciflow.run_sequential:sciflow_run_metaflows
+	sciflow_check_sagemaker_flows=sciflow.run_sequential:sciflow_check_sagemaker_flows
+	sciflow_run_sagemaker_flows=sciflow.run_sequential:sciflow_run_sagemaker_flows
 nbs_path = nbs
 doc_path = docs
 root_path = .
